# programming-C

./: .gitmodules  1 lab  README.md
Lab/1 курс 1 семестр/Lessons 01/: task 1  task 2  task 3
Lab/1 курс 1 семестр/Lessons 03/: task 1.c
Lab/1 курс 1 семестр/Lessons 04/: task 1
Lab/1 курс 1 семестр/Lessons 10/: Makefile-1
Lab/1 курс 2 семестр/: README.md
Lab/1 курс 2 семестр/1 курс 1 семестр/Lessons 02/: task 3
Lab/1 курс 2 семестр/1 курс 1 семестр/Lessons 03/: task 3
Lab/1 курс 2 семестр/1 курс 1 семестр/Lessons 12/task1/: CMakeLists.txt
Lab/1 курс 2 семестр/1 курс 1 семестр/Lessons 12/task1/background/: CMakeLists.txt
Lab/1 курс 2 семестр/1 курс 2 семестр/РГЗ/inverse_matrix/: CMakeLists.txt  main.c  matrix.txt
Lab/1 курс 2 семестр/1 курс 2 семестр/РГЗ/inverse_matrix/include/: matrix.h
Lab/1 курс 2 семестр/1 курс 2 семестр/РГЗ/inverse_matrix/src/: matrix.c
Lab/1 курс 2 семестр/1 курс 2 семестр/РГЗ/inverse_matrix/test/: CMakeLists.txt
Lab/1 курс 2 семестр/1 курс 2 семестр/РГЗ/inverse_matrix/tests/: test_matrix.c
Lab/1 курс 2 семестр/Lab 1/: FillInc
Lab/1 курс 2 семестр/Lessons 03/: README.md
Lab/1 курс 2 семестр/Lessons 04/: word.txt
Lab/1 курс 2 семестр/РГЗ/inverse_matrix/: CMakeLists.txt  matrix1.txt  matrix2.txt  matrix3.txt
Lab/1 курс 2 семестр/РГЗ/inverse_matrix/test/: CMakeLists.txt  test_matrix.c
Lab/Lessons 01/: task 0  task 4
Lab/Lessons 02/: task 1  task 2
Lab/Lessons 03/: task 2
Lab/Lessons 05/: task 1  task 2
Lab/Lessons 1/: number.c  task 0  task 1  task 2  task 3  task 4
Lab/Lessons 10/: 8.1call.h  8.1main.c  8.c
Lab/Lessons 11/: task1.c  task2.c
Lab/Lessons 12/task0/: Makefile
Lab/Lessons 2/: task 1  task 2  task 3
Lab/Lessons 3/: task 1  task 2  task 3
Lab/Lessons 5/: task 1  task 2
Lab/Lessons 6/: task 1  task 2
Lab/Lessons 7/: task 2
Lab/lessons 4 /: task 1
Lab/lessons 7/: task 1  task 2
Material/: Шпаргалка по GitHub.docx  Шпаргалка по взаимодействию с файлами.docx
Practice/2025/: task 01  task 02  task 03  task 04.c  task 05  task 06.c  task 07
Practice/Sort/SortIndexArr/: task 1
Practice/Sort/lab1.BinarySearch/: task 1.c  task 2.c
Practice/Sort/lab1.BubbleSort/: task 1  task 2.c  task 3.c  task 4  task 4.c
Practice/Sort/lab1.HeapSort/: task 1.c  task 2
Practice/Sort/lab1.InsertSort/: task 1.c  task 2.c
Practice/Sort/lab1.QuickSort/: task 1  task 2.c
Practice/Sort/lab1.SelectSort/: task 1.c  task 2.c  task 3
Practice/Sort/lab1.ShakerSort/: task 1.c  task 2.c
Practice/Sort/lab1.ShellSort/: task 1  task 2
Practice/Sort/lab1.SortArrStruct/: task 1.c  task 2.c
Practice/Sort/lab2.DigitalSort/: task1.c  task2.c
Practice/Sort/lab2.Hash1/: 1  1.c  2  2.c  3  3.c
Practice/Sort/lab2.Hash2/: 1  1.c
Practice/Sort/lab2.MergeSort/: task1.c  task2.c
Practice/Sort/lab2.Stack/: 1.c
lab3-git/: .gitmodules  Lab3 Программирование.docx  file1.txt  greeting.txt  mergesort.py  report.docx  results.docx  sort.c
(+23 files in other folders)
